deployment/ingress/01-ingress-to-website.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-website
  annotations:
    kubernetes.io/ingress.class: nginx  
    namespace: yuruna
spec:
  rules:
  - host: "*.yuruna.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: website
            port:
              number: 80
