deployment/ingress/03-ingress-to-website-with-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-website
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = '' ) {
        rewrite ^ https://www.$request_uri permanent;
      }
spec:
  tls:
  - hosts:
    - www.yuruna.com
    secretName: website-kubernetes-tls
  rules:
  - host: "www.yuruna.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: website
            port:
              number: 80
